page overflow fix.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
 
 html {
     height: 100%;
+    overflow: hidden;
+    overflow: hidden;
 }
 
 body {
